--- a/addressbar_sinatraapp/app/views/users/signup.erb
+++ b/addressbar_sinatraapp/app/views/users/signup.erb
@@ -1,1 +1,9 @@
-<h1>Hello</h1>
+<h1>Hello, new user!</h1>
+
+<form action="/signup" method="post">
+  <p>Name: <input type="text" name="username"></p>
+  <p>Email: <input type="text" name="email"></p>
+  <p>Password: <input type="password" name="password"></p>
+  <p>Password Confirmation: <input type="password" name="password_confirm"></p>
+  <input class="btn btn-primary" type="submit">
+</form>
